ajustes na estrutura